updated global exception handlers